@@ -644,8 +644,11 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 3117) Fix display of upload size and type with tidy on
 * (bug 1487) invalid html on empty list in banlist
 * (bug 3017) Hotkey conflict for delete and show changes
-* made pixel unit translateable and blocklistline now eats infiniteblock and expiringblock
+* made pixel unit translateable and blocklistline now eats infiniteblock
+  and expiringblock
 * (bug 3092) Wrong numerical separator for big numbers in Serbian.
+* (bug 2855) Credit for a uniq author showed its realname even with
+  $wgAllowRealName=false.
 
 === Caveats ===
 
